--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,8 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
-
+  username: tybui
+  password: P@$$w0rd
 development:
   <<: *default
   database: freebie_development
