--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 FB_APP_ID=1674015322836916
 FB_SECRET=b19da3e6f785721eb389a2d2568905e8
+
+AWS_ACCESS_KEY_ID=AKIAJDNR2QQW7JGVOQTA
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET=freebievn
+AWS_REGION=ap-southeast-1
