send email notification

--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@ AWS_ACCESS_KEY_ID=AKIAJDNR2QQW7JGVOQTA
 AWS_SECRET_ACCESS_KEY=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
 AWS_BUCKET=freebievn
 AWS_REGION=ap-southeast-1
+
+MAILBOX_USERNAME=56934ef7de756bdc6
+MAILBOX_PASSWORD=a9d6983f39dbe4
+MAILBOX_ADDRESS=mailtrap.io
+MAILBOX_DOMAIN=mailtrap.io
+MAILBOX_PORT=2525
+
+HOST=https://chodocu.herokuapp.com/
